--- a/src/app/dictionary-page/dictionary-page.component.html
+++ b/src/app/dictionary-page/dictionary-page.component.html
@@ -1,1 +1,16 @@
-<p>dictionary-page works!</p>
+<h2>
+  Dictionary page
+</h2>
+
+<ul>
+  <li *ngFor="let word of listWord">
+    <a [routerLink]="['/dictionary', word.key]">{{ word.key }}</a>
+  </li>
+</ul>
+
+<div>
+  <button (click)="authService.login()">Login</button>
+  <button (click)="authService.logout()">Logout</button>
+</div>
+
+<router-outlet></router-outlet>
